@@ -1,3 +1,8 @@
+2008-10-21 Jim Garlick <garlick@llnl.gov>
+
+	* src/client.c, src/powermand.c, src/daemon.c, src/powerman.c,
+	src/device_tcp.c : Added preliminary IPv6 support.
+
 2008-10-20 Jim Garlick <garlick@llnl.gov>
 
 	* : tag powerman-2.2.2
